<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Professors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-75dp">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:background="#24B613"
            android:gravity="center"
            android:text="@string/CT_215"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_DKG"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_SG"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:background="#24B613"
            android:gravity="center"
            android:text="@string/EL_213"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_RP"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_TKM"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:background="#24B613"
            android:gravity="center"
            android:text="@string/IT_215"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_JP"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:gravity="center"
            android:text="@string/prof_SB"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="TODO"
            android:onClick="next_prof"
            app:srcCompat="@android:drawable/ic_media_ff"
            android:focusable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>