<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule_wed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="196dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/day_3_head"
            android:textSize="32sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:background="#C11717"
            android:gravity="center"
            android:text="@string/time_1"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/SC_209"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:background="#C11717"
            android:gravity="center"
            android:text="@string/time_2"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/SC_222"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:background="#C11717"
            android:gravity="center"
            android:text="@string/time_3"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/CS_201"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:background="#FF8C00"
            android:gravity="center"
            android:text="@string/lab"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/time_4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginRight="32sp"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/SC_222"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="profs"
            android:text="@string/profs" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>