<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="220dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_mon"
            android:text="@string/day_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_tue"
            android:text="@string/day_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_wed"
            android:text="@string/day_3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_thu"
            android:text="@string/day_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_fri"
            android:text="@string/day_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_sat"
            android:text="@string/day_6" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginLeft="48sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="48sp"
            android:layout_marginRight="48sp"
            android:layout_marginBottom="32sp"
            android:onClick="click_profs"
            android:text="@string/profs" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>